# nbs

./: README.md
atari/: .message
atari/demos/: .message  README.txt  bobtest.arc  bobtest.atr  cbarmake.atr  cbarmake.tbs  cells.arc  cells.atr  dan15.arc  dan15.atr  dan9a.arc  dan9a.atr  didi7.arc  didi7.atr  dollman.arc  dollman.atr  fire.arc  fire.atr  hpymndys.arc  hpymndys.atr  jbrown.arc  jbrown.atr  knvsfrks.arc  knvsfrks.atr  stars.arc  stars.atr  stimpy.arc  stimpy.atr  t1000b.arc  t1000b.atr
atari/games/: .message  balloonr.arc  chicken.arc  puzzle.arc  rodent.arc  simon.arc  skydiver.arc  sludge.arc  usurp.arc
atari/games/gemdrop/: .message  gemdrop.arc  gemdrop.dcm  gemdrop.uue
atari/games/gogogarb/: gogogarb.atr
atari/starters/: .message  README.txt  dskcom32.arc  mydos453.dcm  supunarc.com  tbasici.arc
atari/utils/: .message  coloriz1.arc  digimenu.arc  equation.arc  filesel.arc  muxchat.arc  sife00.arc  sife00.blurb
lugod/lugod-lwe/: LUG Brochure.sxw  PenLUG Brochure.sxw  lugod-lwe-2004-flyer.sxw  penlugflyer2.sxd
lugod/picnix-banners/: picnix13-125x125.xcf  picnix13-88x31.xcf
lugod/stc/: about.txt  stc-disc-2004-07-04.md5sum  stc-disc-sign.sxw
misc/: tux4kids-trifold.sxw
picnix/300dpi/: picnix-300dpi-alpha.tiff  picnix-300dpi-black.tiff
picnix/banner/: picnix-huge-gradient-tux-dropshadow.tiff  picnix-huge-gradient-tux.tiff  picnix-huge-gradient.tiff  picnix-huge.tiff
picnix/flyer/: picnix13-flyer-2.sxw
unix/: .message
unix/agenda/: .message  bat-empty.xpm  bat-full.xpm  flerror.cxx  flerror.cxx-old  halloween.xpm
unix/agenda/agendaroids/: CHANGES.txt
unix/agenda/aliens/: CHANGELOG.txt
unix/agenda/atari800/: TODO.txt  atari800-agenda-compile.txt  atari800.cfg  atari_x11.c-diff-2001.04.04-1516  notes.txt
unix/agenda/goweather/: CHANGES.txt  goweather.xpm
unix/agenda/icons/: Atari800.xpm  Editor.xpm  Freecell.xpm  Golf.xpm  HTMLViewer.xpm  Solitaire.xpm  ThornQ.xpm  convert-to-gif.sh  same.xpm  terminal.xpm  wordsearch.xpm
unix/agenda/mirror/: CHANGELOG
unix/agenda/thumbpad/: CHANGES.txt
unix/agenda/vr-stella/: README.txt  mainX11.cxx  makefile
unix/www/: .message
unix/www/cgi-util/: README.txt  cgi-util.c  cgi-util.h
unix/www/ssi/: .message  changedate.c  count.c  hit.c  hitstats.c  ifcount.c  iftime.c  makefile  nicedate.c  random.c  roman.c  textnum.c
unix/x/: .message
unix/x/3dpong/: .message
unix/x/bobobot/: .message  CHANGES
unix/x/bugsquish/: CHANGES.txt  README.txt
unix/x/circus-linux/: README.txt  circuslinux-1.0.3.lsm  paddle.ps
unix/x/ctsdemo/: README.txt
unix/x/defendguin/: defendguin.lsm
unix/x/entombed/: CHANGES.txt
unix/x/explosions/: CHANGES.txt  README.txt
unix/x/finalbattle/: .message  UNSUPPORTED.txt  (+2 more)
unix/x/ttt/ttt-2011.04/: Makefile.am  README  configure.ac  ttt.c
unix/zaurus/: scoop-packager.sh
(+150 files in other folders)
